# DynamicObjectDetection

./: .gitignore  README.md
shfiles/: record.sh
src/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/bspline_opt/src/: bspline_optimizer.cpp
src/data_analyzer/: CMakeLists.txt  package.xml
src/data_analyzer/logs/: data.txt
src/data_analyzer/src/: data_analyzer.cpp
src/decision/state_machine/: CMakeLists.txt  package.xml
src/decision/state_machine/cfg/: fsm_params.yaml
src/decision/state_machine/include/state_machine/: fsm.h  plan_container.hpp  replan_fsm.h
src/decision/state_machine/launch/: map.xml  planner.xml  simple_run.launch  simulator.launch
src/decision/state_machine/rviz/: default.rviz
src/decision/state_machine/src/: fsm.cpp  replan_fsm.cpp  state_machine_node.cpp
src/dynamic_map_generator/src/: random_dynamic_map.cpp
src/dynamic_tracker/: CMakeLists.txt  package.xml
src/dynamic_tracker/config/: default.rviz
src/dynamic_tracker/include/dynamic_tracker/: cluster_tester.hpp  dbscan_cluster.cpp  dbscan_cluster.h  dbscan_cluster.hpp  dynamic_tracker.h  dynamic_tracker.hpp  kalman_filter.h  tracker.hpp  tracker_pool.h  tracking_pool.hpp  typedef.hpp
src/dynamic_tracker/launch/: cluster_tester.launch  test.launch  test_cluster.launch
src/dynamic_tracker/src/: cluster_test_node.cpp  cluster_tester.cpp  dbscan_cluster.cpp  dynamic_tracker.cpp  kalman_filter.cpp  main_node.cpp  test_node.cpp  tracker_pool.cpp  tracking_pool.cpp
src/env_manager/: CMakeLists.txt  package.xml
src/env_manager/cfg/: env_manager_params.yaml  grid_map_params.yaml
src/env_manager/include/env_manager/: env_manager.h
src/env_manager/include/env_manager/dynamic/: tracker.hpp  tracker_pool.h
src/env_manager/include/env_manager/static/: grid_map.h
src/env_manager/launch/: map.xml  simulator.xml  test_env.launch
src/env_manager/logs/: 20240519222208.txt  20240519224339.txt  20240520124404.txt  20240520131525.txt  20240520132622.txt  20240520132854.txt  20240520132950.txt  20240520133613.txt  20240520133738.txt  20240520134419.txt  20240520134556.txt  20240520134621.txt  20240520134743.txt  20240520135522.txt  20240520145217.txt  20240520145716.txt  20240520150925.txt  20240520150948.txt  20240520151058.txt  20240520151329.txt  20240520151439.txt  20240520151716.txt  20240520151900.txt  20240520152031.txt  20240520152101.txt  20240520152206.txt  20240520152346.txt  20240520152630.txt  20240520153206.txt  20240520153245.txt  20240520153459.txt  20240520153818.txt  20240520153906.txt  20240520154144.txt  20240520154652.txt  20240520154910.txt  20240520155235.txt  20240520155242.txt  20240520155309.txt  20240520155544.txt  (+8 more)
src/env_manager/rviz/: default.rviz
src/env_manager/src/: env_manager.cpp  grid_map.cpp  kalman_filter.cpp  pos_checker.cpp  raycast.cpp  test_node.cpp  tracker_pool.cpp
src/path_searching/: CMakeLists.txt  package.xml
src/path_searching/include/path_searching/: astar.hpp  dyn_a_star.h  topo_prm.h  topo_rpm.hpp
src/path_searching/src/: astar.cpp  dyn_a_star.cpp  kinodynamic_astar.cpp  test_kinodynamic.cpp  topo_prm.cpp  topo_rpm.cpp
src/planManager/: CMakeLists.txt  package.xml
src/planManager/include/planManager/: planManager.h
src/plan_env/: CMakeLists.txt  package.xml
src/plan_env/config/: default.rviz
src/plan_env/launch/: dsp_map_test.launch
src/plan_env/src/: dbscan_cluster.cpp  dsp_map.cpp  dsp_map_math.cpp  dsp_map_node.cpp  env_manager.cpp  grid_map.cpp  ikd_Tree.cpp  kalman_filter.cpp  map_visualizer.cpp  particle_map.cpp  pos_checker.cpp  test.cpp  test_stCapsule.cpp  tracker_pool.cpp
src/plan_manage/: CMakeLists.txt  package.xml
src/plan_manage/config/: default.rviz  real.rviz
src/plan_manage/include/plan_manage/: ego_replan_fsm.h  planner_manager.h
src/plan_manage/launch/: map.launch  map.xml  planner.xml  real-world-planner.xml  run_in_experiment.launch  rviz.launch  simple_run.launch  simulator.launch
src/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp
src/plan_manager/: CMakeLists.txt  package.xml
src/plan_manager/cfg/: plan_manager_params.yaml
src/plan_manager/config/: default.rviz
src/plan_manager/include/plan_manager/: plan_container.hpp  plan_manager.h
src/plan_manager/include/plan_manager/path_searching/: astar.h  kinodynamic_astar.h  topo_prm.h
src/plan_manager/include/plan_manager/traj_visualization/: traj_visualization.h
src/plan_manager/include/plan_manager/uniform_bspline/: uniform_bspline.h
src/plan_manager/include/plan_manager/uniform_bspline_opt/: bspline_optimizer.h
src/plan_manager/launch/: map.xml  planner.xml  simple_run.launch  simulator.launch  test_algorithm.xml  test_plan.launch  test_planner.xml
src/plan_manager/rviz/: default.rviz
src/plan_manager/src/: plan_manager.cpp  plan_manager_test_node.cpp  test_node.cpp  traj_server.cpp
src/plan_manager/src/path_searching/: astar.cpp  kinodynamic_astar.cpp  topo_prm.cpp
src/plan_manager/src/traj_visualization/: traj_visualization.cpp
src/plan_manager/src/uniform_bspline/: uniform_bspline.cpp
src/plan_manager/src/uniform_bspline_opt/: bspline_optimizer.cpp
src/planner/bspline_opt/: CMakeLists.txt
src/planner/path_searching/: CMakeLists.txt
src/planner/plan_env/: CMakeLists.txt
src/planner/plan_manage/: CMakeLists.txt
src/planner/traj_utils/: CMakeLists.txt
src/ros_test/: CMakeLists.txt  package.xml
src/ros_test/src/: test_node.cpp
src/traj_utils/src/: planning_visualization.cpp
src/trajectories/: CMakeLists.txt  package.xml
src/trajectories/include/trajectories/: polynomial_traj.h
src/trajectories/src/: non_uniform_bspline.cpp  polynomial_traj.cpp  uniform_bspline.cpp
src/visualization_test/: CMakeLists.txt  package.xml
src/visualization_test/src/: traj_visualization.cpp  visualization_test_node.cpp
src/visualization_utils/: CMakeLists.txt  package.xml
src/visualization_utils/include/visualization_utils/: color.hpp  map_visualizer.h  traj_visualizer.h
src/visualization_utils/src/: map_test_node.cpp  map_visualizer.cpp  traj_test_node.cpp  traj_visualizer.cpp
(+50 files in other folders)
