<?xml version="1.0"?>
<package format="2">
  <name>plan_manager</name>
  <version>0.0.0</version>
  <description>The plan_manager package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="huyu@todo.todo">huyu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>env_manager</build_depend>
  <build_depend>visualization_utils</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>trajectories</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>env_manager</build_export_depend>
  <build_export_depend>visualization_utils</build_export_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>env_manager</exec_depend>
  <exec_depend>visualization_utils</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>trajectories</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
